--- a/Taoyuan_Traffic.csproj
+++ b/Taoyuan_Traffic.csproj
@@ -154,6 +154,7 @@
     <Compile Include="Models\Interface\IBusDynamic.cs" />
     <Compile Include="Models\Repository\BusDynamicRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\GetRoute.cs" />
     <Compile Include="ViewModels\BusRouteDeserialize.cs" />
     <Compile Include="ViewModels\PublicSub.cs" />
   </ItemGroup>
@@ -168,6 +169,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\BusRoute\Index.cshtml" />
+    <Content Include="Views\BusRoute\JsonBusEstimatedInfo.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
