--- a/bin/Taoyuan_Traffic.dll.config
+++ b/bin/Taoyuan_Traffic.dll.config
@@ -15,6 +15,9 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="BusDynamicURL" value="http://ptx.transportdata.tw/MOTC/v2/Bus/RealTimeByFrequency/City/Taoyuan"/>
+    <add key="BusRouteURL" value="http://ptx.transportdata.tw/MOTC/v2/Bus/Route/City/Taoyuan"/>
+    <add key="BusEstimatedTimeURL" value="http://ptx.transportdata.tw/MOTC/v2/Bus/EstimatedTimeOfArrival/City/Taoyuan"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6" />
