新增站牌資訊到一半

--- a/Web.config
+++ b/Web.config
@@ -18,6 +18,7 @@
     <add key="BusDynamicURL" value="http://ptx.transportdata.tw/MOTC/v2/Bus/RealTimeByFrequency/City/Taoyuan"/>
     <add key="BusRouteURL" value="http://ptx.transportdata.tw/MOTC/v2/Bus/Route/City/Taoyuan"/>
     <add key="BusEstimatedTimeURL" value="http://ptx.transportdata.tw/MOTC/v2/Bus/EstimatedTimeOfArrival/City/Taoyuan"/>
+    <add key="BusDynamicInfoURL" value="http://ptx.transportdata.tw/MOTC/v2/Bus/RealTimeByFrequency/City/Taoyuan"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6" />
