--- a/Taoyuan_Traffic.csproj
+++ b/Taoyuan_Traffic.csproj
@@ -139,11 +139,14 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\BusDynamicController.cs" />
     <Compile Include="Controllers\BusRouteController.cs" />
+    <Compile Include="Controllers\BusStopController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Interface\IBusRoute.cs" />
+    <Compile Include="Models\Interface\IBusStop.cs" />
     <Compile Include="Models\Repository\BusRouteRepository.cs" />
+    <Compile Include="Models\Repository\BusStopRepository.cs" />
     <Compile Include="ViewModels\BusDynamicDeserialize.cs" />
     <Compile Include="Models\DataClasses.designer.cs">
       <AutoGen>True</AutoGen>
@@ -154,6 +157,7 @@
     <Compile Include="Models\Interface\IBusDynamic.cs" />
     <Compile Include="Models\Repository\BusDynamicRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\BusStopDeserialize.cs" />
     <Compile Include="ViewModels\GetRoute.cs" />
     <Compile Include="ViewModels\BusRouteDeserialize.cs" />
     <Compile Include="ViewModels\PublicSub.cs" />
