--- a/Taoyuan_Traffic.csproj
+++ b/Taoyuan_Traffic.csproj
@@ -157,6 +157,7 @@
     <Compile Include="Models\Interface\IBusDynamic.cs" />
     <Compile Include="Models\Repository\BusDynamicRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\BusStopCustom.cs" />
     <Compile Include="ViewModels\BusStopDeserialize.cs" />
     <Compile Include="ViewModels\GetRoute.cs" />
     <Compile Include="ViewModels\BusRouteDeserialize.cs" />
@@ -174,6 +175,8 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\BusRoute\Index.cshtml" />
     <Content Include="Views\BusRoute\JsonBusEstimatedInfo.cshtml" />
+    <Content Include="Views\BusStop\JsonBusStopInfo.cshtml" />
+    <Content Include="Views\BusStop\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
