20170508-完成動態公車、台鐵的API (已納入API文件)

--- a/Web.config
+++ b/Web.config
@@ -29,6 +29,8 @@
     <!--Task-->
     <add key ="TaskDynamicBusURL" value="http://192.168.1.111:1004/api/v1/Bus/BusDynamic/index"/>
     <add key ="TaskAllRouteURL" value="http://192.168.1.111:1004/api/v1/Bus/BusRoute/index"/>
+    <!--Paring-->
+    <add key="ParkingInfoURL" value="http://data.tycg.gov.tw/api/v1/rest/datastore/0daad6e6-0632-44f5-bd25-5e1de1e9146f?format=json"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6" />
