--- a/Web.config
+++ b/Web.config
@@ -31,6 +31,10 @@
     <add key ="TaskAllRouteURL" value="http://192.168.1.111:1004/api/v1/Bus/BusRoute/index"/>
     <!--Paring-->
     <add key="ParkingInfoURL" value="http://data.tycg.gov.tw/api/v1/rest/datastore/0daad6e6-0632-44f5-bd25-5e1de1e9146f?format=json"/>
+    <!--Weather-->
+    <add key="WeatherInfoURL" value="http://opendata.cwb.gov.tw/api/v1/rest/datastore/F-D0047-005"/>
+    <!--Alert-->
+    <add key="AlertInfoURL" value="https://alerts.ncdr.nat.gov.tw/JSONAtomFeed.ashx"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6" />
