--- a/Web.config
+++ b/Web.config
@@ -35,6 +35,8 @@
     <add key="WeatherInfoURL" value="http://opendata.cwb.gov.tw/api/v1/rest/datastore/F-D0047-005"/>
     <!--Alert-->
     <add key="AlertInfoURL" value="https://alerts.ncdr.nat.gov.tw/JSONAtomFeed.ashx"/>
+    <!--RealTime-->
+    <add key="RealTimeInfoURL" value="http://od.moi.gov.tw/data/api/pbs"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6" />
