--- a/bin/Taoyuan_Traffic.dll.config
+++ b/bin/Taoyuan_Traffic.dll.config
@@ -37,6 +37,8 @@
     <add key="AlertInfoURL" value="https://alerts.ncdr.nat.gov.tw/JSONAtomFeed.ashx"/>
     <!--RealTime-->
     <add key="RealTimeInfoURL" value="http://od.moi.gov.tw/data/api/pbs"/>
+    <!--Ubike-->
+    <add key="UBikeInfoURL" value="http://data.tycg.gov.tw/api/v1/rest/datastore/a1b4714b-3b75-4ff8-a8f2-cc377e4eaa0f?format=json"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6" />
