--- a/bin/Taoyuan_Traffic.dll.config
+++ b/bin/Taoyuan_Traffic.dll.config
@@ -39,6 +39,8 @@
     <add key="RealTimeInfoURL" value="http://od.moi.gov.tw/data/api/pbs"/>
     <!--Ubike-->
     <add key="UBikeInfoURL" value="http://data.tycg.gov.tw/api/v1/rest/datastore/a1b4714b-3b75-4ff8-a8f2-cc377e4eaa0f?format=json"/>
+    <!--Rest-->
+    <add key="RestInfoURL" value="http://data.tycg.gov.tw/api/v1/rest/datastore/93d7f2e1-668a-4f02-862e-89e8decbe024?format=json"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6" />
