--- a/Taoyuan_Traffic.csproj
+++ b/Taoyuan_Traffic.csproj
@@ -499,8 +499,8 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\BusDynamic\Index.cshtml" />
-    <Content Include="Views\BusStop\BusRoute\Index.cshtml" />
-    <Content Include="Views\BusStop\BusRoute\JsonBusEstimatedInfo.cshtml" />
+    <Content Include="Views\BusRoute\Index.cshtml" />
+    <Content Include="Views\BusRoute\JsonBusEstimatedInfo.cshtml" />
     <Content Include="Views\BusStop\JsonBusStopInfo.cshtml" />
     <Content Include="Views\BusStop\Index.cshtml" />
     <Content Include="Scripts\jquery-3.1.1.slim.min.map" />
