--- a/bin/Taoyuan_Traffic.dll.config
+++ b/bin/Taoyuan_Traffic.dll.config
@@ -16,31 +16,31 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <!--Bus-->
     <add key="BusDynamicURL" value="http://ptx.transportdata.tw/MOTC/v2/Bus/RealTimeByFrequency/City/Taoyuan" />
-    <add key="BusRouteURL" value="http://ptx.transportdata.tw/MOTC/v2/Bus/Route/City/Taoyuan" />
-    <add key="BusEstimatedTimeURL" value="http://ptx.transportdata.tw/MOTC/v2/Bus/EstimatedTimeOfArrival/City/Taoyuan" />
+    <add key="BusRouteURL" value="http://ptx.transportdata.tw/MOTC/v2/Bus/Route/City" />
+    <add key="BusEstimatedTimeURL" value="http://ptx.transportdata.tw/MOTC/v2/Bus/EstimatedTimeOfArrival/City" />
     <add key="BusDynamicInfoURL" value="http://ptx.transportdata.tw/MOTC/v2/Bus/RealTimeByFrequency/City/Taoyuan" />
     <add key="BusStopURL" value="http://ptx.transportdata.tw/MOTC/v2/Bus/StopOfRoute/City/Taoyuan" />
     <!--TRA-->
-    <add key="TraLineURL" value="http://ptx.transportdata.tw/MOTC/v2/Rail/TRA/Line?$format=JSON"/>
-    <add key="StationOfLine" value="http://ptx.transportdata.tw/MOTC/v2/Rail/TRA/StationOfLine?$format=JSON"/>
-    <add key="TraStaionURL" value="http://ptx.transportdata.tw/MOTC/v2/Rail/TRA/Station?$format=JSON"/>
-    <add key="TraClassURL" value="http://ptx.transportdata.tw/MOTC/v2/Rail/TRA/TrainClassification?$format=JSON"/>
-    <add key="TraDailyTimetableURL" value="http://ptx.transportdata.tw/MOTC/v2/Rail/TRA/DailyTimetable/OD/"/>
+    <add key="TraLineURL" value="http://ptx.transportdata.tw/MOTC/v2/Rail/TRA/Line?$format=JSON" />
+    <add key="StationOfLine" value="http://ptx.transportdata.tw/MOTC/v2/Rail/TRA/StationOfLine?$format=JSON" />
+    <add key="TraStaionURL" value="http://ptx.transportdata.tw/MOTC/v2/Rail/TRA/Station?$format=JSON" />
+    <add key="TraClassURL" value="http://ptx.transportdata.tw/MOTC/v2/Rail/TRA/TrainClassification?$format=JSON" />
+    <add key="TraDailyTimetableURL" value="http://ptx.transportdata.tw/MOTC/v2/Rail/TRA/DailyTimetable/OD/" />
     <!--Task-->
-    <add key ="TaskDynamicBusURL" value="http://192.168.1.111:1004/api/v1/Bus/BusDynamic/index"/>
-    <add key ="TaskAllRouteURL" value="http://192.168.1.111:1004/api/v1/Bus/BusRoute/index"/>
+    <add key="TaskDynamicBusURL" value="http://192.168.1.111:1004/api/v1/Bus/BusDynamic/index" />
+    <add key="TaskAllRouteURL" value="http://192.168.1.111:1004/api/v1/Bus/BusRoute/index" />
     <!--Paring-->
-    <add key="ParkingInfoURL" value="http://data.tycg.gov.tw/api/v1/rest/datastore/0daad6e6-0632-44f5-bd25-5e1de1e9146f?format=json"/>
+    <add key="ParkingInfoURL" value="http://data.tycg.gov.tw/api/v1/rest/datastore/0daad6e6-0632-44f5-bd25-5e1de1e9146f?format=json" />
     <!--Weather-->
-    <add key="WeatherInfoURL" value="http://opendata.cwb.gov.tw/api/v1/rest/datastore/F-D0047-005"/>
+    <add key="WeatherInfoURL" value="http://opendata.cwb.gov.tw/api/v1/rest/datastore" />
     <!--Alert-->
-    <add key="AlertInfoURL" value="https://alerts.ncdr.nat.gov.tw/JSONAtomFeed.ashx"/>
+    <add key="AlertInfoURL" value="https://alerts.ncdr.nat.gov.tw/JSONAtomFeed.ashx" />
     <!--RealTime-->
-    <add key="RealTimeInfoURL" value="http://od.moi.gov.tw/data/api/pbs"/>
+    <add key="RealTimeInfoURL" value="http://od.moi.gov.tw/data/api/pbs" />
     <!--Ubike-->
-    <add key="UBikeInfoURL" value="http://data.tycg.gov.tw/api/v1/rest/datastore/a1b4714b-3b75-4ff8-a8f2-cc377e4eaa0f?format=json"/>
+    <add key="UBikeInfoURL" value="http://data.tycg.gov.tw/api/v1/rest/datastore/a1b4714b-3b75-4ff8-a8f2-cc377e4eaa0f?format=json" />
     <!--Rest-->
-    <add key="RestInfoURL" value="http://data.tycg.gov.tw/api/v1/rest/datastore/93d7f2e1-668a-4f02-862e-89e8decbe024?format=json"/>
+    <add key="RestInfoURL" value="http://data.tycg.gov.tw/api/v1/rest/datastore/93d7f2e1-668a-4f02-862e-89e8decbe024?format=json" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6" />
@@ -162,6 +162,14 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Diagnostics.DiagnosticSource" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.1.0" newVersion="4.0.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.6.0.0" newVersion="4.6.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Extensions.Configuration.Abstractions" publicKeyToken="adb9793829ddae60" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.1.1.0" newVersion="1.1.1.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
