--- a/packages.config
+++ b/packages.config
@@ -40,6 +40,7 @@
   <package id="Microsoft.CSharp" version="4.3.0" targetFramework="net46" />
   <package id="Microsoft.DotNet.InternalAbstractions" version="1.0.0" targetFramework="net46" />
   <package id="Microsoft.DotNet.PlatformAbstractions" version="1.1.1" targetFramework="net46" />
+  <package id="Microsoft.Extensions.Configuration" version="1.0.0" targetFramework="net46" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="1.1.1" targetFramework="net46" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.1.0" targetFramework="net46" />
   <package id="Microsoft.Extensions.DependencyModel" version="1.1.1" targetFramework="net46" />
