20170619-氣象改版前

--- a/Taoyuan_Traffic.csproj
+++ b/Taoyuan_Traffic.csproj
@@ -500,6 +500,7 @@
     <Compile Include="ViewModels\Weather\WeatherPoP.cs" />
     <Compile Include="ViewModels\Weather\WeatherT.cs" />
     <Compile Include="ViewModels\Weather\WeatherDescription.cs" />
+    <Compile Include="ViewModels\Weather\WeatherWind.cs" />
     <Compile Include="ViewModels\Weather\WeatherWx.cs" />
   </ItemGroup>
   <ItemGroup>
