--- a/packages.config
+++ b/packages.config
@@ -3,6 +3,7 @@
   <package id="bootstrap" version="3.3.7" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
   <package id="EntityFramework.zh-Hant" version="6.1.3" targetFramework="net46" />
+  <package id="jose-jwt" version="2.4.0" targetFramework="net46" />
   <package id="jQuery" version="3.1.1" targetFramework="net46" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.Mvc.zh-Hant" version="5.2.3" targetFramework="net46" />
